--- a/css/global.css
+++ b/css/global.css
@@ -69,32 +69,53 @@ header > nav li:last-child > a {
 /* styling for main section */
 
 main {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    padding: 2rem;
 }
 
-main .service {
+main > h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.center {
+    text-align: center;
+}
+
+/* styling of services section */
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.services .service {
     display: inline-block;
     box-sizing: border-box;
     width: 30rem;
     padding: 2rem;
 }
 
-main .service img {
+.services .service img {
     float: left;
     width: 30%;
 }
 
-main .service .service_description {
+.services .service .service_description {
     box-sizing: border-box;
     float: left;
     width: 70%;
     padding-left: 2rem;
 }
 
-main .service a {
-    color: #3366CC;
+.services .service a {
+    display: inline-block;
+    background-color: #3366CC;
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    margin-top: 0.5rem;
 }
 
 /* styling for footer section */
@@ -124,7 +145,7 @@ footer p {
 /* stying for service details */
 
 .details {
-    margin: 3rem;
+    /* margin: 3rem; */
     text-align: center;
 }
 
@@ -132,12 +153,56 @@ footer p {
     /* background-color: blue; */
 }
 
-.details > a {
-    display: inline-block;
+/* styling for team */
+
+.team_member {
+    margin: 4rem;
+}
+
+.team_member > img {
+    border-radius: 50%;
+    float: left;
+    margin-right: 3rem;
     margin-top: 1rem;
+    width: 8rem;
+}
+
+.team_member_info {
+    margin-left: 12rem;
+}
+
+/* styling for testimonials */
+
+
+.testimonials h1 {
+    margin-bottom: 4rem;
+    text-align: center;
+}
+
+.testimonials .testimony {
+    /* background-color: red; */
+    margin-bottom: 4rem;
+    border-left: 0.2rem solid #3366CC;
+    padding-left: 1rem;
+}
+
+.testimonials .testimony:last-child {
+    margin-bottom: 0;
+}
+
+.testimonials .testimony h2 {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    margin: 0;
+}
+
+.ok_btn {
+    display: inline-block;
+    margin-top: 1rem;   
     text-decoration: none;
     color: white;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
     background-color: #3366CC;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
 }
+
