--- a/css/global.css
+++ b/css/global.css
@@ -94,6 +94,7 @@ main > h1 {
     box-sizing: border-box;
     width: 30rem;
     padding: 2rem;
+    position: relative;
 }
 
 .services .service img {
@@ -116,6 +117,9 @@ main > h1 {
     padding: 0.5rem 1rem;
     border-radius: 1rem;
     margin-top: 0.5rem;
+    position: absolute;
+    bottom: 0;
+
 }
 
 /* styling for footer section */
